<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GESTION DES EXIGENCES</string>
    <string name="all_project">Tous les projects</string>
    <string name="button_newP">Nouveau Project</string>
    <string name="button_newR">Nouvelle exigence</string>
    <string name="title_activity_main">RequirementActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="projet_1">Projet 1</string>

    <!-- Formulaire ajout nouveau projet -->
    <string name="title_activity_project_form">Nouveau Projet exigences</string>
    <string name="hello_new_project">Nouveau Projet</string>
    <string name="adding_NewP">Valider</string>
    <string name="project_name">Nom projet</string>
    <string name="project_desc">Petite description du Projet</string>
    <string name="hello_start_requirement">Ajout Exigence</string>
    <string name="start_requirement_name">Intitule de la premiere exigence</string>
    <string name="start_requirement_desc">Description exigence</string>
    <string name="start_sub_requirement_name">Intitule sous exigence</string>
    <string name="start_sub_requirement_desc">Description sous exigence</string>

    <!-- Activite pour la gestion des listes d'exigences -->
    <string name="title_activity_requirement">Liste exigences du Projet</string>
    <string name="adding_newR">Ajouter Exigence</string>
    <string name="delete_requirement">Supprimer</string>
    <string name="update_requirement">Modifier</string>
    
    
     <!-- Activite pour la gestion ajout d'une exigence -->
    <string name="title_activity_requirement_form">Ajout Exigence</string>
     <string name="hello_requirement_form">Ajout Exigence</string>
    <string name="new_requirement_name">Intitule</string>
    <string name="new_requirement_desc">Description</string>
    <string name="relation_new_requirement">Relation de derivation</string>
    <string name="list_requirement_spinner">Derive de : </string>
    <string name="adding_NewR">Valider</string>
    
</resources>